# LAXCODE

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  pyproject.toml  setup_nvidia.py  test_laxcode.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
laxcode/: __init__.py  main.py
laxcode/animations/: __init__.py  core.py  effects.py
laxcode/config/: __init__.py  manager.py
laxcode/core/: __init__.py  agent.py  agent_v2.py  session.py
laxcode/providers/: __init__.py  anthropic.py  base.py  nvidia_nim.py  openai.py
laxcode/tools/: __init__.py  base.py  diff_tool.py  file_tools.py  search_tools.py  shell_tools.py
tests/: test_diff_tool.py  test_tools.py
